--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,7 +1,3 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Groups</h1>
-
 <table>
   <thead>
     <tr>
@@ -14,15 +10,16 @@
   </thead>
 
   <tbody>
-    <% @groups.each do |group| %>
+    <% @discipleship.groups.each do |group| %>
       <tr>
         <td><%= group.nombre %></td>
         <td><%= group.activo %></td>
-        <td><%= group.discipleship %></td>
-        <td><%= group.teacher %></td>
-        <td><%= link_to 'Show', group %></td>
-        <td><%= link_to 'Edit', edit_group_path(group) %></td>
-        <td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= group.discipleship.nombre %></td>
+        
+        <td><%= group.teacher.presence ? group.teacher.user.nombre_completo : "Sin docente asignado" %></td>
+        <td><%= link_to 'Show', discipleship_group_path(@discipleship,group) %></td>
+        <td><%= link_to 'Edit', edit_discipleship_group_path(@discipleship,group) %></td>
+        <td><%= link_to 'Destroy', [@discipleship,group], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
