--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,109 @@
-<p id="notice"><%= notice %></p>
+<div class="row grey lighten-5 middle-xs no-margin">    
+  <div class="container">
+    <div class="row center-xs" >
+      
+        <div class="col-xs-12
+                    col-sm-8
+                    col-md-6
+                    col-lg-6 ">
+          <div class="box">
+            <div class="card z-depth-3">
+              <div class="card-content black-text start-xs">
+                <span class="card-title center"><%=@group.nombre%></span>
+                <b>Discipulado: </b><p><%=@group.discipleship.nombre%></p>
+                <b>Rango otorgado: </b><p><%=@discipleship.rangoOtorgado%></p>
+                <b>Pacto asociado: </b><p>Pacto de compromiso</p>
+                <b>Descripcion del convenio: </b><p><%=@discipleship.descripcionPacto%></p>
+                <div class="actions center">
+                  <%= link_to 'Editar', edit_discipleship_group_path(@discipleship,@group), class: "green-text" %> 
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      
+    </div>
+    <div class="row center-xs" >
+      
+        <div class="col-xs-12
+                    col-sm-8
+                    col-md-6
+                    col-lg-6 ">
+          <div class="box">
+            <div class="card z-depth-3">
+              <div class="card-content black-text start-xs">
+                <span class="card-title center">Horario</span>
+                <table class="bordered striped white">
+        <thead>
+          <tr>
+              <th>Dias</th>
+              <th>Horas</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <th>Luness</th>
+            <td><%=@group.horary.lunes%></td>
+          </tr>
+          <tr>
+            <th>Martes</th>
+            <td><%=@group.horary.martes%></td>
+          </tr>
+          <tr>
+            <th>Miercoles</th>
+            <td><%=@group.horary.miercoles%></td>
+          </tr>
+          <tr>
+            <th>Jueves</th>            
+            <td><%=@group.horary.jueves%></td>
+          </tr>
+          <tr>
+            <th>Viernes</th>              
+                     
+            <td><%=@group.horary.viernes%></td>
+          </tr>
+          <tr>
+            <th>Sabado</th>
+                     
+            <td><%=@group.horary.sabado%></td>
+          </tr>
+          <tr>
+              <th>Domingo</th>
+                
+            <td><%=@group.horary.domingo%></td>
+          </tr>
+        </tbody>
+      </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      
+
+      <div class="col-xs-12
+                    col-sm-8
+                    col-md-6
+                    col-lg-6 ">
+          <div class="box">
+            <div class="card z-depth-3">
+              <div class="card-content black-text start-xs">
+                <span class="card-title center">Estudiantes inscritos</span>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+
+    </div>
+
+    
+  </div>   
+</div>
 
 <p>
   <strong>Nombre:</strong>
@@ -20,5 +125,4 @@
   <%= @group.teacher %>
 </p>
 
-<%= link_to 'Edit', edit_group_path(@group) %> |
-<%= link_to 'Back', groups_path %>
+<%= link_to 'Back', discipleship_groups_path %>
